--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.8",
+    "chart.js": "^4.4.7",
     "dayjs": "^1.11.13",
-    "firebase": "^11.0.2",
+    "firebase": "^11.2.0",
     "framer-motion": "^11.18.1",
-    "react": "^18.3.1",
+    "react": "^19.0.0",
     "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^9.5.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
