--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
-    "react-split-pane": "^0.1.92",
+    "split-pane-react": "^0.1.3",
+    "split.js": "^1.6.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
