--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^9.5.0",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
